# atto

./: .clang-format  CMakeLists.txt  LICENSE
common/: CMakeLists.txt  EAPointer.hpp  messagesstore.cpp  messagesstore.hpp  sharedmutex.hpp  tcpsocket.cpp  tcpsocket.hpp  threadpool.cpp  threadpool.hpp  types.cpp  types.hpp  udpsocket.cpp  udpsocket.hpp
data_filter/: CMakeLists.txt  inputdata.hpp  main.cpp
data_generator/: CMakeLists.txt  main.cpp
filter_service/: CMakeLists.txt  main.cpp  tcpsender.cpp  tcpsender.hpp  udpreciver.cpp  udpreciver.hpp
reciver/: CMakeLists.txt  main.cpp
senders/: CMakeLists.txt  main.cpp  sender_data1.hpp  sender_data2.hpp  sender_data3.hpp  sender_data4.hpp  udpsender.cpp  udpsender.hpp
